fix/fix gap

--- a/src/widgets/WhyWe/index.module.scss
+++ b/src/widgets/WhyWe/index.module.scss
@@ -26,7 +26,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  row-gap: 145px;
+  gap: 145px;
 
   &::before {
     content: '';
